[gd_scene load_steps=12 format=3 uid="uid://t1hw12nblgho"]

[ext_resource type="Script" path="res://Characters/Player/Player.gd" id="1_lbptk"]
[ext_resource type="Resource" uid="uid://3nhq18iyxmco" path="res://Inventory/test_inv.tres" id="2_n538d"]
[ext_resource type="PackedScene" uid="uid://dvt7qh16wjdu" path="res://Weapon/melee_weapon.tscn" id="3_fgvt3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wcsep"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4ffcq"]
height = 1.0

[sub_resource type="Animation" id="Animation_0kpdg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D/WeaponPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.401724, -0.440534, -0.69754)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.193732, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ppdpm"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.401724, -0.440534, -0.69754), Vector3(0.402, -0.727, -0.698)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(-0.193732, 0, 0), Vector3(-0.387463, 0, 0)]
}

[sub_resource type="Animation" id="Animation_hi353"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0349066, 0, 0.0261799), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.01, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jv4gi"]
resource_name = "landing"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0523599, 0, 0.0349066), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_e6ltj"]
resource_name = "melee_attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.05144, -0.328521, -0.69754)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0187244, 0.192836, -1.4752)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera3D/WeaponPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 2.27242, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v8acp"]
_data = {
"RESET": SubResource("Animation_0kpdg"),
"idle": SubResource("Animation_ppdpm"),
"jump": SubResource("Animation_hi353"),
"landing": SubResource("Animation_jv4gi"),
"melee_attack": SubResource("Animation_e6ltj")
}

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.46472)
collision_layer = 2
script = ExtResource("1_lbptk")
inventory_data = ExtResource("2_n538d")

[node name="StandingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_wcsep")

[node name="CrouchingCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_4ffcq")

[node name="CrouchRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Head" type="Node3D" parent="Neck"]

[node name="Eyes" type="Node3D" parent="Neck/Head"]

[node name="Camera3D" type="Camera3D" parent="Neck/Head/Eyes"]

[node name="InteractRay" type="RayCast3D" parent="Neck/Head/Eyes/Camera3D"]
target_position = Vector3(0, 0, -3)
collision_mask = 5

[node name="Hand" type="Marker3D" parent="Neck/Head/Eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.09474)

[node name="WeaponPivot" type="Node3D" parent="Neck/Head/Eyes/Camera3D"]

[node name="WeaponMesh" parent="Neck/Head/Eyes/Camera3D/WeaponPivot" instance=ExtResource("3_fgvt3")]
transform = Transform3D(0.1, 0, 0, 0, 0.839005, 0.0192522, 0, -0.164607, 0.0981293, 0.401724, -0.440534, -0.69754)

[node name="AimRay" type="RayCast3D" parent="Neck/Head/Eyes/Camera3D"]
target_position = Vector3(0, 0, -500)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Neck/Head/Eyes"]
libraries = {
"": SubResource("AnimationLibrary_v8acp")
}
autoplay = "idle"
playback_default_blend_time = 0.1

[node name="Muzzle" type="Node3D" parent="Neck/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.408796, -0.420951, -0.771054)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="animation_finished" from="Neck/Head/Eyes/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
